# p2p

./: .fastn-media_stream.key  .gitignore  Cargo.toml  README.md  STREAMING_DESIGN.md  api_vocabulary_analysis.txt  e2e-test.sh  lease_authentication_blog_post.md  lease_system_blog_post.md  test-file-transfer.sh  test-file-transfer.sh.backup  test-request-response-magic.sh  test-request-response.sh  test-shell-simple.sh  test.txt  test_file.txt
.github/workflows/: dual-droplet-p2p-test.yml.disabled
docs/: identity.md
examples/: Cargo.toml
examples/src/: audio_decoder.rs  audio_test.rs  auth_example.rs  file_transfer.rs  http_proxy.rs  http_proxy_simple.rs  lib.rs  media_stream.rs  media_stream_v2.rs  multi_protocol.rs  request_response.rs  shell_advanced.rs  shell_simple.rs  tcp_proxy.rs
examples/src/streaming/: client.rs  mod.rs  protocol.rs  server.rs  ui.rs
fastn-id52/: CHANGELOG.md
fastn-id52/src/: keyring.rs  keys.rs  main.rs
fastn-net/src/: endpoint_singleton.rs  get_endpoint.rs  lib.rs  protocol.rs  secret.rs
fastn-net/src/dot_fastn/: lock.rs
fastn-p2p/: Cargo.toml
fastn-p2p-client/: Cargo.toml
fastn-p2p-client/src/: client.rs  error.rs  lib.rs
fastn-p2p/src/: client.rs  coordination.rs  handshake.rs  lib.rs  main.rs  protocols.rs
fastn-p2p/src/cli/: client.rs  daemon.rs  identity.rs  init.rs  mod.rs  status.rs
fastn-p2p/src/cli/daemon/: control.rs  mod.rs  p2p.rs  protocol_trait.rs  test_protocols.rs
fastn-p2p/src/cli/daemon/protocols/: echo.rs  mod.rs  shell.rs
fastn-p2p/src/identity/: mod.rs
fastn-p2p/src/net/: mod.rs
fastn-p2p/src/server/: builder.rs  daemon.rs  listener.rs  mod.rs  serve_all.rs  session.rs
fastn-p2p/tests/: multi_protocol_server.rs
malai-next/: Cargo.toml  README.md
malai-next/src/: expose_http.rs  http_bridge.rs  lib.rs  protocol.rs  utils.rs
scripts/: e2e-test.sh  test-do-audio-streaming.sh  test-media-stream.sh  test-request-response.sh  test-shell-simple.sh
scripts/cli/: test-basic.sh  test-do-p2p.sh  test-request-response.sh
