[workspace]
members = ["fastn-p2p"]
resolver = "2"

[workspace.package]
authors = ["Amit Upadhyay <upadhyay@gmail.com>"]
edition = "2021"
license = "UPL-1.0"
repository = "https://github.com/fastn-stack/p2p"
homepage = "https://github.com/fastn-stack/p2p"
rust-version = "1.75"

[workspace.dependencies]
# Crypto (from fastn-id52)
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
data-encoding = "2"
rand = "0.8.5"
keyring = "3"
serde = { version = "1", features = ["derive"] }

# Optional features  
tokio = { version = "1", features = ["rt"] }
hickory-resolver = "0.24"