[package]
name = "examples"
version = "0.1.0"
edition.workspace = true
description = "P2P examples showcasing all major use cases"

[dependencies]
fastn-p2p = { path = "../fastn-p2p" }
tokio.workspace = true
serde.workspace = true
clap.workspace = true

# Example binaries - each showcases a major P2P use case
[[bin]]
name = "request_response" 
path = "src/request_response.rs"

[[bin]]
name = "file_transfer"
path = "src/file_transfer.rs"

[[bin]]
name = "shell_simple"
path = "src/shell_simple.rs"

[[bin]]
name = "shell_advanced"
path = "src/shell_advanced.rs"

[[bin]]
name = "tcp_proxy"
path = "src/tcp_proxy.rs"

[[bin]]
name = "http_proxy"
path = "src/http_proxy.rs"

[[bin]]
name = "media_stream"
path = "src/media_stream.rs"

