[package]
name = "examples"
version = "0.1.0"
edition.workspace = true
description = "P2P examples showcasing all major use cases"

[dependencies]
fastn-p2p-client = { path = "../fastn-p2p-client" }
tokio.workspace = true
serde.workspace = true
clap.workspace = true
thiserror.workspace = true
reqwest.workspace = true
hyper = { version = "1", features = ["server", "http1"] }

# Audio streaming dependencies
rodio = "0.19" # For audio playback
minimp3 = "0.5" # For MP3 decoding 
symphonia = { version = "0.5", features = ["mp3"] } # Alternative audio decoder
bincode = "1.3" # For efficient serialization
termion = "2.0" # For raw terminal input

# Example binaries - each showcases a major P2P use case
[[bin]]
name = "request_response" 
path = "src/request_response.rs"

[[bin]]
name = "file_transfer"
path = "src/file_transfer.rs"

[[bin]]
name = "shell_simple"
path = "src/shell_simple.rs"

[[bin]]
name = "shell_advanced"
path = "src/shell_advanced.rs"

[[bin]]
name = "tcp_proxy"
path = "src/tcp_proxy.rs"

[[bin]]
name = "http_proxy_simple"
path = "src/http_proxy_simple.rs"

[[bin]]
name = "media_stream"
path = "src/media_stream.rs"

[[bin]]
name = "multi_protocol"
path = "src/multi_protocol.rs"

[[bin]]
name = "audio_test"
path = "src/audio_test.rs"

