[package]
name = "examples"
version = "0.1.0"
edition.workspace = true
description = "P2P examples showcasing all major use cases"

[dependencies]
fastn-p2p-client = { path = "../fastn-p2p-client" }
fastn-p2p = { path = "../fastn-p2p" }  # For server-side APIs
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
thiserror.workspace = true
reqwest.workspace = true
hyper = { version = "1", features = ["server", "http1"] }

# Audio streaming dependencies
rodio = "0.19" # For audio playback
minimp3 = "0.5" # For MP3 decoding 
symphonia = { version = "0.5", features = ["mp3"] } # Alternative audio decoder
bincode = "1.3" # For efficient serialization
termion = "2.0" # For raw terminal input

# Example binaries - focus on request_response for daemon coordination testing
[[bin]]
name = "request_response" 
path = "src/request_response.rs"

