[package]
name = "fastn-p2p-client"
version = "0.1.0"
edition.workspace = true
description = "Lightweight P2P client library for fastn - communicates via daemon"
homepage.workspace = true
license.workspace = true

[dependencies]
# Lightweight dependencies - no iroh, no crypto
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
directories.workspace = true
thiserror.workspace = true
uuid = { version = "1.0", features = ["v4"] }

# Re-export key types (but not the heavy crypto implementation)
fastn-id52 = { path = "../fastn-id52", version = "0.1.1" }
fastn-context.workspace = true