[package]
name = "fastn-p2p-client"
version = "0.1.0"
edition.workspace = true
description = "Lightweight P2P client library for fastn - communicates via daemon"
homepage.workspace = true
license.workspace = true

[dependencies]
# Lightweight dependencies - no iroh, no crypto
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
directories.workspace = true
thiserror.workspace = true
uuid.workspace = true

# Re-export key types (but not the heavy crypto implementation)
fastn-id52.workspace = true
fastn-context.workspace = true