[package]
name = "fastn-p2p"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Type-safe P2P communication library for Rust"
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["p2p", "peer-to-peer", "networking", "async", "iroh"]
categories = ["network-programming", "asynchronous"]

[dependencies]
# Core dependencies (consolidated from fastn-net and fastn-id52)
async-stream.workspace = true
eyre.workspace = true
futures-core.workspace = true
futures-util.workspace = true
iroh.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

# Crypto (from fastn-id52)
ed25519-dalek.workspace = true
data-encoding.workspace = true
rand.workspace = true
keyring.workspace = true

# Context integration
fastn-context.workspace = true

# Proc macros
fastn-p2p-macros = { path = "../fastn-p2p-macros", version = "0.1.0" }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
# Optional DNS support (from fastn-id52)
dns = []