[package]
name = "fastn-p2p"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Type-safe P2P communication library for Rust"
homepage.workspace = true
license.workspace = true
keywords = ["p2p", "peer-to-peer", "networking", "crypto", "ed25519"]
categories = ["network-programming", "cryptography"]

[[bin]]
name = "fastn-p2p-keygen"
path = "src/main.rs"

[dependencies]
ed25519-dalek.workspace = true
data-encoding.workspace = true
serde.workspace = true
rand.workspace = true
keyring.workspace = true

# Optional DNS lookup support
tokio = { workspace = true, optional = true, features = ["rt"] }
hickory-resolver = { version = "0.24", optional = true }

[features]
dns = ["dep:tokio", "dep:hickory-resolver"]
