[package]
name = "fastn-p2p"
version = "0.1.0"
edition.workspace = true
description = "High-level, type-safe P2P communication for fastn"
homepage.workspace = true
license.workspace = true

[[bin]]
name = "fastn-p2p"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["env"] }
directories.workspace = true
rand.workspace = true
chrono.workspace = true
fs2.workspace = true
async-trait.workspace = true
fastn-net.workspace = true
fastn-id52.workspace = true
fastn-p2p-client.workspace = true
async-stream.workspace = true
eyre.workspace = true
futures-core.workspace = true
futures-util.workspace = true
iroh.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

# Context integration
fastn-context.workspace = true


[dev-dependencies]
tokio-test = "0.4"
enum-display-derive = "0.1"