[package]
name = "malai-next"
version = "0.1.0"
edition.workspace = true
description = "Next-generation malai built with fastn-p2p"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fastn-p2p = { path = "../fastn-p2p" }
tokio.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
eyre.workspace = true
serde.workspace = true
hyper.workspace = true
hyper-util.workspace = true
colored.workspace = true

[[bin]]
name = "expose_http"
path = "src/expose_http.rs"

[[bin]]
name = "http_bridge"
path = "src/http_bridge.rs"